# task-context-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MIGRATION_SUMMARY.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/agents/: mcp-test.agent.md
.github/instructions/: development-task-implementation-guide.instructions.md  python-project-rules.instructions.md  python-tech-stack.instructions.md  task-implementation-guide.instructions.md
app/: models.py  server.py  services.py
docs/: AGENT_INSTRUCTIONS.md  BRD.md  IMPLEMENTATION_PLAN.md  MIGRATIONS.md  PUBLISHING.md  WORKFLOW.md  ai-agent-instructions.md  dev-task-rules.md  requirements-v1.md  task-context-mcp-plan.md  usecase-scenarios.md
docs/tasks/: fix-ruff-errors-dev-plan.md
scripts/: check_dependencies.py
src/task_context_mcp/: __init__.py  client.py  main.py  server.py  tools.py
src/task_context_mcp/business/: __init__.py  interfaces.py  services.py
src/task_context_mcp/config/: logging_config.py  settings.py
src/task_context_mcp/config/environments/: __init__.py  base.py  development.py  production.py  testing.py
src/task_context_mcp/database/: __init__.py  client.py  collections.py  database.py  models.py  schemas.py
src/task_context_mcp/entrypoints/mcp/: __init__.py  main.py
src/task_context_mcp/integrations/database/: __init__.py  manager.py  models.py  repositories.py
src/task_context_mcp/models/: __init__.py  entities.py  exceptions.py  value_objects.py
src/task_context_mcp/repositories/: __init__.py  artifacts.py  task_catalog.py
src/task_context_mcp/services/: __init__.py  embeddings.py
tests/: client.py  conftest.py  test_database.py  test_e2e.py  test_migrations_utils.py  test_models.py  test_services.py
tests/e2e/: conftest.py  test_mcp_server_e2e.py  test_task_management.py
tests/integration/: test_database.py
tests/unit/: test_artifact_repository.py  test_collections.py  test_database_client.py  test_embeddings.py  test_settings.py  test_task_catalog_repository.py
tests/unit/test_business/: __init__.py  test_services.py
tests/unit/test_integrations/: __init__.py  test_repositories.py
tests/unit/test_models/: test_entities.py  test_value_objects.py
