[project]
name = "task-context-mcp"
version = "0.1.0"
description = "MCP сервер для сохранения и восстановления контекста задач AI-агента"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.5.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "app"]